recursion.logo.koch.PentaKoch.scala.error
Erreur de compilation :
PentaKoch:9: error: ')' expected but double literal found.
    pentaKoch(levels-1,length*.0.4)
                                ^